--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,41 @@
     src: url(../fonts/raleway-black.woff2);
     font-weight: 900;
 }
+
+body {
+    background-color: #010101;
+    color: white;
+    font-family: raleway_f, sans-serif;
+    line-height: 1.55;
+}
+
+.main-header {
+    position: relative;
+}
+
+.layers {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+}
+
+.layer {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-size: cover;
+    background-position: center;
+}
+
+.layers__base {
+    transform: translate3d(0, calc(var(--scrollTop) / 2), 0 );
+}
+
+.main-article {
+    min-height: 100vh;
+
+}
