add title styles

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-
+    --index: calc(1vw + 1vh);
 }
 
 @font-face {
@@ -46,13 +46,41 @@ body {
     position: absolute;
     background-size: cover;
     background-position: center;
+    will-change: transform;
+    z-index: 2;
 }
 
 .layers__base {
+    transform: translate3d(0, calc(var(--scrollTop) / 1.6), 0 );
+    z-index: 0;
+}
+
+.layers__middle {
+    transform: translate3d(0, calc(var(--scrollTop) / 2.5), 0 );
+}
+
+.layers__front {
+    transform: translate3d(0, calc(var(--scrollTop) / 5.7), 0 );
+}
+
+.layer__header {
+    z-index: 1;
     transform: translate3d(0, calc(var(--scrollTop) / 2), 0 );
+    will-change: transform;
+    text-transform: uppercase;
+    font-weight: 900;
+    letter-spacing: calc(var(--index) * .2);
+    margin-top: calc(var(--index) * -2);
+    color: #e7e7e0;
+
+}
+
+.layers__title {
+    font-size: calc(var(--index) * 2.6);
+    letter-spacing: calc(var(--index) * .8);
+
 }
 
 .main-article {
     min-height: 100vh;
-
 }
