--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 
 :root {
     --index: calc(1vw + 1vh);
+    --text: #e7e7e0
 }
 
 @font-face {
@@ -21,13 +22,26 @@
 
 body {
     background-color: #010101;
-    color: white;
     font-family: raleway_f, sans-serif;
     line-height: 1.55;
 }
 
 .main-header {
     position: relative;
+}
+
+.main-header::after {
+    content: '';
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    height: calc(var(--index) * 10);
+    background-image: url(../img/ground.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    bottom: calc(var(--index) * -4.6);
+
 }
 
 .layers {
@@ -71,16 +85,54 @@ body {
     font-weight: 900;
     letter-spacing: calc(var(--index) * .2);
     margin-top: calc(var(--index) * -2);
-    color: #e7e7e0;
+    color: var(--text);
+    text-shadow: 0 0 15px #9e7d35;
 
 }
 
 .layers__title {
     font-size: calc(var(--index) * 2.6);
     letter-spacing: calc(var(--index) * .8);
+}
+
+.layers__caption {
 
 }
 
 .main-article {
+    /* transform: translate3d(0, calc(var(--scrollTop) / -8), 0); */
     min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    color: var(--text);
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.main-article__header {
+    text-transform: uppercase;
+    font-size: calc(var(--index) * 1.8);
+    letter-spacing: calc(var(--index) * .5);
+    transform: translate3d(0, calc(var(--scrollTop) / 7.5), 0);
+    will-change: transform;
+}
+
+.main-article__paragraph {
+    transform: translate3d(0, calc(var(--scrollTop) / 7.5), 0);
+    max-width: calc(var(--index) * 30);
+    font-size: calc(var(--index) * .8);
+    margin-top: calc(var(--index) * 1);
+    will-change: transform;
+}
+
+.copy {
+    position: absolute;
+    bottom: calc(var(--index) * 1 );
+    opacity: .40;
+    font-size: calc(var(--index) * .70);
+    letter-spacing: calc(var(--index) * .05);
+
 }
